--- a/src/Components/DashboardComponents/RestaurantDetail/restaurantdetail.css
+++ b/src/Components/DashboardComponents/RestaurantDetail/restaurantdetail.css
@@ -42,8 +42,12 @@
     justify-content: space-between;
 }
 
-.editprofilebanner figure {
+.editprofilebanner > figure {
     margin: 0 0;
+    height: 475px;
+}
+.editprofilebanner > figure > img {
+    height: 100%;
 }
 
 .editprofilebanner .info button {
@@ -59,6 +63,7 @@
     border-radius: 50%;
     background-color:rgb(137, 135, 135) ;
     padding: 0.5px;
+    display: block;
 }
 
 .editprofileform .numbersdds {
