Fixes UI issues.

--- a/src/Components/DashboardComponents/Dashboard/dashboard.css
+++ b/src/Components/DashboardComponents/Dashboard/dashboard.css
@@ -423,6 +423,7 @@
   width: 185px;
   color: #000;
   display: none;
+  z-index: 9;
 }
 
 .topdishestabpart .bestsellerpart ul li p > span > b > div {
