--- a/src/Components/DashboardComponents/AllMedia/allmedia.css
+++ b/src/Components/DashboardComponents/AllMedia/allmedia.css
@@ -1,194 +1,192 @@
-.mediapage>.title {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 35px;
+.mediapage > .title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 35px;
 }
 
-.mediapage>.title>h2 {
-    color: #000;
-    font-size: 32px;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
-    line-height: 1.3;
-    margin-bottom: 0;
+.mediapage > .title > h2 {
+  color: #000;
+  font-size: 32px;
+  font-family: "NeuzeitGro-Bol";
+  font-weight: normal;
+  line-height: 1.3;
+  margin-bottom: 0;
 }
 
 .mediaupload {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-    cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  cursor: pointer;
 }
 
-.mediaupload input[type=file] {
-    font-size: 100px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
+.mediaupload input[type="file"] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
 }
 
 .medialist {
-    width: 100%;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 15px;
+  width: 100%;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 15px;
 }
 
 .medialist li {
-    width: calc(100%/5 - 13px);
-    margin-right: 16px;
-    margin-bottom: 15px;
+  width: calc(100% / 5 - 13px);
+  margin-right: 16px;
+  margin-bottom: 15px;
 }
 
-.medialist li:hover div{ 
-        display: block !important; 
-        background-color: red;
+.medialist li:hover div {
+  display: block !important;
+  background-color: red;
 }
 
-.medialist li .mediaimgname{
-    display: none;
-    background-color: red;
+.medialist li .mediaimgname {
+  display: none;
+  background-color: red;
 }
 
-.medialist li:nth-child(5n+5) {
-    margin-right: 0;
+.medialist li:nth-child(5n + 5) {
+  margin-right: 0;
 }
 
 .medialist li figure {
-    position: relative;
-    margin: 0 0 5px;
-    width: 100%;
+  position: relative;
+  margin: 0 0 5px;
+  width: 100%;
 }
 
-.medialist li figure>img {
-    width: 100%;
-    height: 215px;
-    object-fit: fill;
+.medialist li figure > img {
+  width: 100%;
+  height: 215px;
+  object-fit: fill;
 }
 
-.medialist li figure>button {
+.medialist li figure > button {
+    width: 30px;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  padding: 0;
+}
+
+.uploadbutton{
     position: absolute;
     bottom: 10px;
-    right: 10px;
-    padding: 0;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    /* width: 10px; */
+    right: 10px;   
 }
 
-.medialist li figure>button>img {
-    width: 100%;
+.closebtn{
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
+
+.medialist li figure > button > img {
+  width: 100%;
 }
 
 .medialist li h4 {
-    font-size: 16px;
-    color: #000;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
-    text-align: center;
-    padding: 0 5px;
-    margin: 0;
-    word-break: break-all;
+  font-size: 16px;
+  color: #000;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
+  text-align: center;
+  padding: 0 5px;
+  margin: 0;
+  word-break: break-all;
 }
 
 /**************** Arabic css **************/
 
 .arabic .medialist li {
-margin-right: 0;
-margin-left: 16px;
+  margin-right: 0;
+  margin-left: 16px;
 }
 
-.arabic .medialist li:nth-child(5n+5) {
-    margin-right: 0;
-    margin-left: 0;
-} 
+.arabic .medialist li:nth-child(5n + 5) {
+  margin-right: 0;
+  margin-left: 0;
+}
 
 .arabic .btn1 svg {
-    margin-left: 5px;
-    margin-right: 0;
+  margin-left: 5px;
+  margin-right: 0;
 }
-
 
 /***************** responsive css ***********************/
 
-@media(max-width:1199px) {
-    .medialist li h4 {
-        font-size: 14px;
-    }
+@media (max-width: 1199px) {
+  .medialist li h4 {
+    font-size: 14px;
+  }
 }
 
+@media (max-width: 991px) {
+  .medialist li {
+    width: calc(100% / 3 - 7px);
+    margin-right: 10px;
+  }
 
+  .medialist li:nth-child(5n + 5) {
+    margin-right: 10px;
+  }
 
-@media(max-width:991px) {
-    .medialist li {
-        width: calc(100%/3 - 7px);
-        margin-right: 10px;
-    }
-
-    .medialist li:nth-child(5n+5) {
-        margin-right: 10px;
-    }
-
-    .medialist li:nth-child(3n+3) {
-        margin-right: 0;
-    }
+  .medialist li:nth-child(3n + 3) {
+    margin-right: 0;
+  }
 }
 
-
-@media(max-width:767px) {
-    .mediapage>.title>h2 {
-        font-size: 25px;
-    }
-
+@media (max-width: 767px) {
+  .mediapage > .title > h2 {
+    font-size: 25px;
+  }
 }
 
+@media (max-width: 500px) {
+  .mediapage > .title > h2 {
+    font-size: 18px;
+  }
 
+  .mediapage > .title > .btn1 {
+    font-size: 12px;
+  }
 
-@media(max-width:500px) {
-    .mediapage>.title>h2 {
-        font-size: 18px;
-    }
+  .medialist {
+    justify-content: space-between;
+  }
 
-    .mediapage>.title>.btn1 {
-        font-size: 12px;
-    }
+  .medialist li {
+    width: 48%;
+    margin-right: 0;
+    justify-content: space-between;
+  }
 
-    .medialist {
-        justify-content: space-between;
-    }
+  .medialist li h4 {
+    font-size: 12px;
+  }
 
-    .medialist li {
-        width: 48%;
-        margin-right: 0;
-        justify-content: space-between;
-    }
+  .medialist li:nth-child(5n + 5) {
+    margin-right: 0;
+  }
 
-    .medialist li h4 {
-        font-size: 12px;
-    }
-
-    .medialist li:nth-child(5n+5) {
-        margin-right: 0;
-    }
-
-    .medialist li figure>img {
-        height: 165px;
-    }
-
-
-
+  .medialist li figure > img {
+    height: 165px;
+  }
 }
 
-@media(max-width:380px) { 
-    .medialist li {
-        width: 100%;
-    }
-    .medialist li figure>img {
-        /* height: auto; */     
-    }
-
+@media (max-width: 380px) {
+  .medialist li {
+    width: 100%;
+  }
+  .medialist li figure > img {
+    /* height: auto; */
+  }
 }
