menu error message reconsidered.

--- a/src/Components/Menu/menu.css
+++ b/src/Components/Menu/menu.css
@@ -93,6 +93,9 @@
     background-color: #360305;
     height: 100vh;
 }
+.erroImage{
+    width: 100%;
+}
 .searchbox button {
     border: none;
     outline: none;
