--- a/src/Components/DashboardComponents/AllMedia/allmedia.css
+++ b/src/Components/DashboardComponents/AllMedia/allmedia.css
@@ -109,14 +109,84 @@
 .infotable {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between ; 
 }
+
+.infotable > .leftpart > button {
+  border: none;
+  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  line-height: 1;
+  width: 125px;
+  border-radius: 100px;
+  background-color: #fff;
+  border: 1px solid #EA6A12;
+  color: #EA6A12;
+  padding: 12px 14px 9px;
+  position: relative;
+  z-index: 1;
+}
+
+
+.infotable > .leftpart > button > img {
+  transform: rotate(-90deg);
+  display: inline-block;
+  margin: -3px 0 0 0;
+}
+
 .infotable > div {
   font-family: "NeuzeitGro-Reg";
   font-size: 16px;
   font-weight: 400;
   line-height: 28px;
   letter-spacing: 0.02em;
+}
+
+.infotable > .leftpart { 
+  position: relative;
+  z-index: 99;
+}
+
+.infotable > .leftpart > ul {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 3px;
+  background: #EA6A12;
+  border-radius: 20px 20px 10px 10px;
+  margin: 0;
+  display: block;
+  padding: 38px 0px 0px 0;
+  cursor: pointer;
+}
+
+.infotable > .leftpart > ul > li {
+  color: #fff;
+  background: #EA6A12;  
+  padding: 5px;
+  line-height: 1;
+}
+
+.infotable > .leftpart > ul > li:hover {
+  background-color: #fff;
+  color:#EA6A12; 
+}
+.infotable > .leftpart > ul > .activeselect {
+  background-color: #fff;
+  color:#EA6A12; 
+}
+.infotable > .leftpart > ul > li:last-child {
+  border-radius:0 0 10px 10px;
+}
+
+.infotable > .rightpart { 
+  display: flex;
+}
+
+.infotable > div div {
+padding-right: 10px;
 }
 .infotable > div + div {
   margin-left: 15px;
@@ -128,6 +198,7 @@
   display: inline-block;
   vertical-align: sub;
   background: #d9d9d9;
+  margin-top: 3px;
 }
 
 .actable {
@@ -184,8 +255,23 @@
 
 .acedittable {
   position: absolute;
-  top:0;
-  left: 0;
+  top: 3px;
+  left: 5px;
+  height: auto;
+  width: 100%;
+  z-index: 1;
+}
+
+.acedittable .btnbox:after {
+  content: "";
+  position: absolute;
+  top: -13px;
+  left: -4px;
+  background: url(../../../images//arrowimg.svg) top center no-repeat;
+  background-size: contain;
+  width: 25px;
+  height: 25px;
+  transform: rotate(-175deg);
 }
 
 .acedittable > button {
@@ -193,14 +279,110 @@
   outline: none;
   background-color: transparent;
   width: auto;
+  display: block;
   height: auto;
 }
+
 .acedittable > button > img {
   display: block;
+  height: auto;
+  display: block;
+  width: 4px;
 }
 
-.acedittable .btnbox   {
-  display: none;
+.acedittable > .btnbox {
+  background-color: #FFEEE7 ;
+  border-radius: 8px;
+  padding: 8px;
+  text-align: left;
+  display: block;
+  position: absolute;
+  width: 134px;
+  top: 29px;
+}
+
+.acedittable > .btnbox button  {
+  font-size: 14px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  display: block;
+  line-height: normal;
+  width: 100%;
+  text-align: left;
+}
+
+.acedittable > .btnbox button img {
+  width: 13px;
+}
+
+.switchbtn .switch {
+  position: relative;
+  display: inline-block;
+  width: 24px;
+  height: 12px;
+}
+
+.switchbtn .switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.switchbtn .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.switchbtn .slider:before {
+  position: absolute;
+  content: "";
+  height: 8px;
+  width: 8px;
+  left: 4px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.switchbtn input:checked + .slider {
+  background-color: #2196F3;
+}
+
+.switchbtn input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+.switchbtn input:checked + .slider:before {
+  -webkit-transform: translateX(9px);
+  -ms-transform: translateX(9px);
+  transform: translateX(9px);
+}
+
+.switchbtn .slider.round {
+  border-radius: 34px;
+}
+
+.switchbtn .slider.round:before {
+  border-radius: 50%;
+}
+
+.acedittable > .btnbox button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.acedittable > .btnbox button > span {
+  width: calc(100% - 30px);
+  display: inline-block;
 }
 
 
