--- a/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
+++ b/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
@@ -13,6 +13,13 @@
     background:url("../../../images/block.png") center center no-repeat;
 
 }
+.tablecolorGreen{
+    background-color: #42B856;
+}
+.tablecolorGray{
+    background-color: #D9D9D9;
+}
+
 
 .colorDefine{
     background-color: #7F7F7F !important;
