api integrated of qr tablw download and craate coustome hook

--- a/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
+++ b/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
@@ -19,7 +19,9 @@
 .tablecolorGray{
     background-color: #D9D9D9;
 }
-
+.tablsCss{
+    margin-top: 25px;
+}
 
 .colorDefine{
     background-color: #7F7F7F !important;
