--- a/src/Components/DashboardComponents/KDS/kdsScreen.css
+++ b/src/Components/DashboardComponents/KDS/kdsScreen.css
@@ -83,7 +83,7 @@
 }
 
 .kgcardtitle>.rightpart>h2 {
-    font-size: 14px;
+    font-size: 18px;
 }
 
 .deliveryinfo {
@@ -118,6 +118,8 @@
 
 .kgcardlist {
     width: 100%;
+    height: 464px;
+    overflow: auto;
 }
 
 .kgcardlist>li {
@@ -172,6 +174,7 @@
     line-height: 43px;
     letter-spacing: 0.02em;
     text-align: center;
+    max-width: 380px;
 }
 
 .popup-para{
@@ -229,6 +232,17 @@
 }
 
 .contentpart::-webkit-scrollbar-thumb {
+    background: #EABB36;
+    border-radius: 10px;
+}
+
+.kgcardlist::-webkit-scrollbar {
+    width: 6px;
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+.kgcardlist::-webkit-scrollbar-thumb {
     background: #EABB36;
     border-radius: 10px;
 }
