add search with select in add table and edit table

--- a/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
+++ b/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
@@ -169,6 +169,13 @@
     right: -15px;
     cursor: pointer;
 }
+.selected{
+    background-color: red;
+}
 
+.bg-red{
+    color: white;
+    background-color: #ea6a12;
+}
 
 
