--- a/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
+++ b/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
@@ -163,6 +163,20 @@
     margin-top: 8px;
 }
 
+.multiselectDropdown>div>div>div{
+    border: 1px solid #ea6a12 !important;
+     outline: #ea6a12 !important;
+}
+.multiselectDropdown>div>div>div:hover{
+    border: 1px solid #ea6a12 !important;
+     outline: #ea6a12 !important;
+}
+.rmsc .dropdown-container:focus-within {
+ box-shadow:  #ea6a12  0 0 0 1px  !important;
+}
+.infotable{
+    width: 100%;  
+}
 
 .itemtablepopup .closebtn{
     top: -15px;
