--- a/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
+++ b/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
@@ -174,6 +174,10 @@
 .rmsc .dropdown-container:focus-within {
  box-shadow:  #ea6a12  0 0 0 1px  !important;
 }
+
+.infotable>.leftpart .rmsc {
+    width: 300px;
+}
 .infotable{
     width: 100%;  
 }
