chnage in multi select and manager

--- a/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
+++ b/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
@@ -182,6 +182,13 @@
     width: 100%;  
 }
 
+.companyDropDown{
+    cursor: pointer;
+}
+.companyDropDown div:hover{
+    background-color: #ea6a12;
+    color: white;
+}
 .itemtablepopup .closebtn{
     top: -15px;
     right: -15px;
