--- a/src/Components/DashboardComponents/Manager/manager.css
+++ b/src/Components/DashboardComponents/Manager/manager.css
@@ -217,6 +217,9 @@
  
   /* overflow: auto; */
 }
+.arabicnumber{
+  float: right;
+}
 
 .addmanagerpopup .popupbody .managerimg {
   position: absolute;
