view kot and view logo  of premium is done

--- a/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
+++ b/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
@@ -13,6 +13,10 @@
     position: relative;
     margin-bottom: 0;
 }
+.logo>img{
+    height: 100px;
+    width: 65px;
+}
 
 .sidebar>.logo {
     text-align: center;
