scroll add in view-kot

--- a/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
+++ b/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
@@ -94,7 +94,10 @@
 
 
 .itemtablepopup .popupbody {
-    display: block;
+    display: block; 
+    overflow-y: overlay;
+    height: 600px;
+
 }
 
 .itemtablepopup .popupbody .itemtable table {
