price ui change

--- a/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
+++ b/src/Components/DashboardComponents/ManageOrder/ManageOrder.css
@@ -185,6 +185,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-right: 10%;
 }
 
 .totalbox>ul>li+li {
